--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ main {
       position: relative;
       width: 100%;
       height: 100vh;
+      font-family: Arial, Helvetica, sans-serif;
 }
 
 .carousel {
@@ -24,10 +25,20 @@ main {
       width: 80%;
       height: 100%;
       display: none;
+      position: relative;
 }
 
 .slide.selected {
       display: block;
+}
+
+.slide .description {
+      color: white;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      padding: 20px;
+      text-align: end;
 }
 
 .thumbnails {
