--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -107,3 +107,19 @@ main {
 .previous.hidden, .next.hidden {
       display: none;
 }
+
+.player {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 15%;
+}
+
+button {
+      color: white;
+      background-color: rgb(0, 132, 255);
+      padding: 10px;
+      border: 2px solid blue;
+      border-radius: 5px;
+      cursor: pointer;
+}
